<resources>
    <string name="app_name">Spendify</string>
    <string name="nombreEmail">Ingrese su nombre o email</string>
    <string name="contraseña">Ingrese su contraseña</string>
    <string name="btnSalir">Salir</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="bienvenida"></string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Spendify</string>
    <string name="nav_header_subtitle">spendify.soporte@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>


    <string name="menu_profile">Mi Perfil</string>
    <string name="menu_balance">Sueldo y gastos</string>

    <string name="balance">Sueldo Mensual $$ :</string>
    <string name="total"></string>
    <string name="cambiarTotal">✍</string>

    <string name="textGastoCategoria">Gasto</string>
    <string name="btnCategoriaAceptar">Agregar</string>
    <string name="btnCategoriaElegir">Categoria</string>
    <string name="sueldoPerfil">"Sueldo de "</string>
    <string name="sueldo">....</string>
    <string name="listaGastos">Lista de Gastos :</string>
    <string name="perfilNombre">Saludos </string>
    <string name="textoGastos" />
    <string name="catCompras">Compras</string>
    <string name="catServicios">Servicios</string>
    <string name="catEntretenimiento">Entretenimiento</string>
    <string name="catOtros">Otros</string>
    <string name="btnMostrarGastos">Mostrar Gastos</string>
</resources>