<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.slideshow.BalanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/balance" />

            <EditText
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="........."
                android:text="@string/total" />

            <Button
                android:id="@+id/cambiarTotal"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:text="✍"
                android:visibility="visible"
                tools:text="@string/cambiarTotal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textGastoCategoria"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textGastoCategoria"
                tools:text="@string/textGastoCategoria" />

            <EditText
                android:id="@+id/CategoriaGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="........."
                android:autofillHints=""
                android:inputType="" />

            <Button
                android:id="@+id/btnCategoriaAceptar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/btnCategoriaAceptar"
                tools:text="@string/btnCategoriaAceptar" />

            <Button
                android:id="@+id/btnCategoriaElegir"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/btnCategoriaElegir"
                tools:text="@string/btnCategoriaElegir" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>